small css change to prevent spill out of autosuggest dropdown

--- a/themes/madek11/stylesheets/scss/master.scss
+++ b/themes/madek11/stylesheets/scss/master.scss
@@ -2412,6 +2412,10 @@ ul[data-parent_meta_key] {
 	}
 }
 
+ul.holder li.input_holder {
+  width: 96%;
+}
+
 .meta_data .description_toggler {
 	display: block;
 	font-size: 13px;
